# pytorch-ie

./: .coveragerc  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  architecture.md  codecov.yml  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/actions/coverage/: action.yml
.github/actions/init-env/: action.yml
.github/actions/pre-commit/: action.yml
.github/actions/pytest/: action.yml
.github/actions/safety/: action.yml
.github/actions/typeguard/: action.yml
.github/hub/: requirements.txt  update_hub_repositories.py
.github/workflows/: constraints.txt  labeler.yml  release.yaml  release.yml  test.yml  test_dataset_scripts.yml  tests.yml  update-hub-repositories.yaml
dataset_builders/conll2002/: conll2002.py
dataset_builders/conll2003/: conll2003.py
dataset_builders/conllpp/: conllpp.py
dataset_builders/german_legal_entity_recognition/: german_legal_entity_recognition.py
dataset_builders/germaner/: germaner.py
dataset_builders/germeval_14/: germeval_14.py
dataset_builders/ncbi_disease/: ncbi_disease.py
dataset_builders/wikiann/: wikiann.py
dataset_builders/wnut_17/: wnut_17.py
datasets/conll2002/: conll2002.py
datasets/conll2003/: conll2003.py
datasets/conllpp/: conllpp.py
datasets/german_legal_entity_recognition/: german_legal_entity_recognition.py
datasets/germaner/: germaner.py
datasets/germeval_14/: germeval_14.py
datasets/imdb/: imdb.py
datasets/ncbi_disease/: ncbi_disease.py
datasets/sem_eval_2010_task_8/: sem_eval_2010_task_8.py
datasets/wikiann/: wikiann.py
datasets/wnut_17/: wnut_17.py
datasets/xfun/: xfun.py
docs/: conf.py  index.md  index.rst
examples/: train_span_classification.py
examples/predict/: ner_span_classification.py  re_generative.py  re_text_classification.py
examples/train/: set_prediction.py  span_classification.py
hf_datasets/xfun/: xfun.py
pytorch_ie/: __init__.py  pipeline.py
pytorch_ie/core/: hf_hub_mixin.py  pytorch_ie.py  utils.py
pytorch_ie/data/: __init__.py  annotation_utils.py  document.py  span_utils.py
pytorch_ie/data/datamodules/: ag_news_datamodule.py  conll2003_datamodule.py  datamodule.py  sciarg_datamodule.py  sst2_datamodule.py  tacred_datamodule.py  trec6_datamodule.py
pytorch_ie/data/datasets/: __init__.py  ag_news.py  brat.py  conll2003.py  few_nerd.py  json.py  scierc.py  sst2.py  t_rex.py  tacred.py  trec.py
pytorch_ie/models/: __init__.py  transformer_seq2seq.py  transformer_span_classification.py  transformer_text_classification.py  transformer_token_classification.py
pytorch_ie/taskmodules/: __init__.py  taskmodule.py  transformer_re_text_classification.py  transformer_seq2seq.py  transformer_span_classification.py  transformer_text_classification.py  transformer_token_classification.py
pytorch_ie/utils/: span.py
src/pytorch_ie/: __init__.py  annotations.py  auto.py  datamodule.py  dataset.py  document.py  documents.py  model.py  pipeline.py  pytorch_model.py
src/pytorch_ie/core/: __init__.py  document.py  hf_hub_mixin.py  metric.py  model.py  module_mixins.py  pytorch_ie.py  registerable.py  registrable.py  statistic.py  taskmodule.py
src/pytorch_ie/data/: __init__.py  annotations.py  builder.py  common.py  dataset.py  dataset_dict.py  dataset_formatter.py  document.py  document_conversion.py  task_encoding.py
src/pytorch_ie/metrics/: __init__.py  confusion_matrix.py  f1.py  set_fbeta.py  statistics.py
src/pytorch_ie/models/: __init__.py  interface.py  sequence_classification_with_pooler.py  simple_generative.py  simple_sequence_classification.py  simple_token_classification.py  token_classification_with_seq2seq_encoder_and_crf.py  transformer_seq2seq.py  transformer_set_prediction.py  transformer_span_classification.py  transformer_text_classification.py  transformer_token_classification.py
src/pytorch_ie/taskmodules/: __init__.py  cross_text_binary_coref.py  interface.py  labeled_span_extraction_by_token_classification.py  multi_modal_sequence_tagging.py  pointer_network_for_end2end_re.py  re_text_classification_with_indices.py  simple_transformer_text_classification.py  taskmodule.py  text_to_text.py  transformer_re_text_classification.py  transformer_seq2seq.py  transformer_set_prediction.py  (+4 more)
tests/: __init__.py  conftest.py  test_annotations.py  test_auto.py  test_document.py  test_metrics.py  test_pipeline.py
tests/core/: test_document.py  test_metric.py  test_registrable.py  test_statistic.py
tests/data/: dataset_tester.py  test_annotations.py  test_builder.py  test_dataset.py  test_dataset_casting.py  test_dataset_common.py  test_dataset_conversion.py  test_dataset_dict.py  test_dataset_scripts.py  test_document.py  test_document_conversion.py  test_new_document_and_datasets.py
tests/examples/: test_predict.py
tests/fixtures/: document.py
tests/helpers/: document_utils.py  run_command.py
tests/metrics/: test_confusion_matrix.py  test_f1.py  test_statistics.py
tests/models/: __init__.py  test_sequence_classification_with_pooler.py  test_sequence_pair_similarity_model_with_pooler.py  test_simple_generative.py  test_simple_sequence_classification.py  test_simple_token_classification.py  test_token_classification_with_seq2seq_encoder_and_crf.py  test_transformer_seq2seq.py  test_transformer_span_classification.py
tests/pipeline/: test_ner_span_classification.py  test_re_generative.py  test_re_text_classification.py
tests/taskmodules/: document.py  test_auto.py  test_cross_text_binary_coref.py  test_labeled_span_extraction_by_token_classification.py  test_multi_modal_sequence_tagging.py  test_pointer_network_for_end2end_re.py  test_re_text_classification_with_indices.py  test_simple_transformer_text_classification.py  test_text2text.py  test_text2text_with_guidance.py  test_transformer_re_text_classification.py  test_transformer_seq2seq.py  test_transformer_span_classification.py  test_transformer_token_classification.py
tests/train/: test_training.py
tests/utils/: test_document.py  test_document_tokenize.py  test_hydra.py  test_span.py  test_window.py
(+117 files in other folders)
