[build-system]
requires = ["poetry-core ~=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytorch-ie"
version = "0.29.4"
description = "State-of-the-art Information Extraction in PyTorch"
readme = "README.md"
authors = ["Christoph Alt <christoph.alt@posteo.de>"]
license = "MIT"
homepage = "https://github.com/christophalt/pytorch-ie"
repository = "https://github.com/christophalt/pytorch-ie"
documentation = "https://pytorch-ie.readthedocs.io"
packages = [
    { include = "pytorch_ie", from = "src" },
]
classifiers = [
    "Framework :: Pytest",
    "Framework :: tox",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/christophalt/pytorch-ie/issues"
"Changelog" = "https://github.com/christophalt/pytorch-ie/releases"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.10"
pytorch-lightning = "^2"
torchmetrics = "^1"
transformers = "^4.18"
# pin to version below 2023.9.0 because that causes problems when using load_dataset with local files (e.g. json)
fsspec = "<2023.9.0"
# required for testing, but, strangely, tests fail, if just in dev-dependencies
absl-py = "^1.0.0"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.12b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.12.0"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
sh = "^2"
types-requests = "^2.27.7"
nox = "^2023.4"
nox-poetry = "^1"
python-dotenv = "^0.20.0"

[tool.black]
line-length = 99
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["pytorch_ie"]

[tool.mypy]
files = [
    "pytorch_ie",
    "examples",
    "tests",
    "datasets"
]
warn_unreachable = false
# warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pytorch_ie"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.pytest.ini_options]
testpaths = "tests/"
log_cli = true
markers = [
    "slow"
]
addopts = [
    "--durations=0",
    "--strict-markers",
    "--doctest-modules"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
